Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-125393

qmllint fails when given files names with backslashes on Windows

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P2: Important P2: Important
    • 6.5.7, 6.7.2, 6.8.0 FF, 6.8
    • 6.7.0
    • QML: Tooling
    • None
    • PySide6 on Windows 11
    • 9b7843457 (dev), e0689651d (6.7), 4937f983b (tqtc/lts-6.5)

      Calling `pyside6-project qmllint` automatically generates type and `qmldir` files for classes to be registered with QML.

      However, it ultimately fails when running on Windows as the paths get passed to `pyside6-qmllint` with Windows-style \ separators, but `importQmlDirs` (see qtdeclarative/src/qmlcompiler/qqmljsimporter.cpp at dev ยท qt/qtdeclarative (github.com)) requires the file to end in `/qmldir` (with a forward slash).

      Manually re-running the command but replacing that final \ with a / causes the command to work without issue, but this prevents using `pyside6-project` as recommended.

      EDIT: Fixed typo, `/qmllint` -> `/qmldir`

        1. pyside2755_log.txt
          8 kB
          Friedemann Kleint
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            ulherman Ulf Hermann
            jtc9242 Joel Collins
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes