qmlcompiler: Sanitize qmldir paths before using them

They may contain backslashes.

Pick-to: 6.5
Fixes: QTBUG-125393
Change-Id: Ifd8c97c44b036ab64a221775a7fe6316445f6cf8
Reviewed-by: Friedemann Kleint <Friedemann.Kleint@qt.io>
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>
(cherry picked from commit 9b784345795984878d2938d6903e7c87ae7f0778)
Reviewed-by: Sami Shalayel <sami.shalayel@qt.io>