tests/auto/qml/qmllint/tst_qmllint.cpp
@@ -97,10 +97,13 @@ private Q_SLOTS:
     void testLineEndings();
 
     void ignoreSettingsNotCommandLineOptions();
+    void backslashedQmldirPath();
+
 #if QT_CONFIG(library)
     void testPlugin();
     void quickPlugin();
 #endif
+
 private:
     enum DefaultImportOption { NoDefaultImports, UseDefaultImports };
     enum ContainOption { StringNotContained, StringContained };
@@ -2151,6 +2154,15 @@ void TestQmllint::ignoreSettingsNotCommandLineOptions()
                                       QStringList{ u"-I"_s, importPath }, true);
     // should not complain about not finding the module that is in importPath
     QCOMPARE(output, QString());
+}
+
+void TestQmllint::backslashedQmldirPath()
+{
+    const QString qmldirPath
+            = testFile(u"ImportPath/ModuleInImportPath/qmldir"_s).replace('/', QDir::separator());
+    const QString output = runQmllint(
+            testFile(u"something.qml"_s), true, QStringList{ u"-i"_s, qmldirPath });
+    QVERIFY(output.isEmpty());
 }
 
 QTEST_MAIN(TestQmllint)
